add new variable

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ POSTGRES_DB=db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=psw
 POSTGRES_PORT=5432
-POSTGRES_HOST=host
+POSTGRES_HOST=localhost
+# POSTGRES_HOST=postgres 
 # POSTGRES_HOST=host.docker.internal
 
 DJANGO_PORT=8000
